--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/22/n13040013.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2018/01/GettyImages-531199404-320x200.jpg"><p align="center">滴滴赴美IPO 暗藏“国家队”权斗魅影</p></a>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/22/n13040013.md#1" title="滴滴赴美IPO 暗藏“国家队”权斗魅影""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/01/GettyImages-531199404-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051791.md#1" title="【百年透视】中共暴政的杀人历史""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id12998879-1406020409071975-600x429-e1622576358581-320x200.jpeg">&nbsp;</a>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051791.md#1" title="【百年透视】中共暴政的杀人历史""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056585-0f8ddc95685b8b90f917f29fa47922b9-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055620.md#1" title="七一北京全民禁买刀 管制区关店禁开火做饭""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056081-36b1df34b7e3f8bffd8404415b86efe5-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054771.md#1" title="涉内幕交易 生物制药华裔高管被永久禁任高管""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056445-150335-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056042.md#1" title="中共发布百年大事记 数千万受害者被抹掉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056049-000_8R928E-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053392.md#1" title="曾9次遭绑架 长沙女护士贺祥姑失踪一月余""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053398-24b0b0ca6e3615c806f74480d2704dbe-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053910.md#1" title="罕见热浪袭美国西北部和东部 电费或猛涨""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054158-GettyImages-1233512988-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mjhpml342.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050010.md#1">【预告】专访李南央：美国文革vs中国文革</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056454.md#1">遭中共跨境威胁 留学生：在澳洲我仍不自由</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056418.md#1">七一临近 蔡霞：中共比表面看起来更脆弱</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/22/n13040013.md#1">滴滴赴美IPO 暗藏“国家队”权斗魅影</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056225.md#1">中共在香港推“洗脑”策略 生活教育全染红</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056481.md#1">前苹果日报主笔冯伟光被保释 旅游证件被扣</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054458.md#1">【名家专栏】人民币升值或贬值的两难困境</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056555.md#1">贩售中国制假冒笔电电池 圣谷男子认罪</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050010.md#1">【预告】专访李南央：美国文革vs中国文革</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056454.md#1">遭中共跨境威胁 留学生：在澳洲我仍不自由</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056418.md#1">七一临近 蔡霞：中共比表面看起来更脆弱</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/22/n13040013.md#1">滴滴赴美IPO 暗藏“国家队”权斗魅影</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052398.md#1">中共党庆文艺演出因故罕见提前 网民热议</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053068.md#1">【拍案惊奇】拜登对华政策有变？新毒株Delta更危险</a><br>
@@ -27,8 +27,8 @@
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052645.md#1">中共欲封闭海南岛建自由港 专家揭背后原因</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13052566.md#1">陈用林：中共全面掌控香港为并吞台湾准备</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053244.md#1">【新闻大家谈】两大新发现 再揭中共掩盖疫情</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051966.md#1">【翻墙必看】中共或疫前已备好疫苗品种</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053924.md#1">政法大学教授：为活摘器官 把人当畜生</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051966.md#1">【翻墙必看】中共或疫前已备好疫苗品种</a><br>
 <br><p align="center"><a href="https://github.com/mjhpml342/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055352.md#1">古风：“千人计划”是变相的盗窃计划</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054138.md#1">【新闻看点】习普说相声 官媒泄内情 美中开网战</a><br>
@@ -39,17 +39,17 @@
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050942.md#1">【名家专栏】就CAVPAC与蓬佩奥的谈话</a><br>
 <br><p align="center"><a href="https://github.com/mjhpml342/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055217.md#1">胡锦涛等多名退休高层缺席中共党庆活动</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056418.md#1">七一临近 蔡霞：中共比表面看起来更脆弱</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055563.md#1">广东书记李希罕见缺席习主持的两个活动</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053283.md#1">网传视频：中共外交部前老人纵火抗议被抓</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054125.md#1">【时事纵横】习续约拉拢普京 党庆秀神秘提前?</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055095.md#1">袁斌：海归博士吴强为何起诉清华大学？</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13051791.md#1">【百年透视】中共暴政的杀人历史</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054657.md#1">钟原：党媒为啥不敢报导政治局会议</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054689.md#1">【拍案惊奇】习替江背锅卖国？外交部遭纵火</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/18/n13031727.md#1">【独家】内部文件泄中共如何变异宗教</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054917.md#1">【翻墙必看】纵火自焚出现在中共外交部门前</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13049219.md#1">中共三任党魁对美外交态度缘何不同？</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055714.md#1">【唐浩视界】中共祸乱百年 五大冤案解密</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13056264.md#1">中共高调庆生 A股三大指数下行 港股普跌</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br>
+<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053283.md#1">网传视频：中共外交部前老人纵火抗议被抓</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050010.md#1">【预告】专访李南央：美国文革vs中国文革</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13054318.md#1">韩国大选七月开跑 形势对亲共的文在寅不利</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054073.md#1">给中共法官的信：不能接受的起诉书</a><br>
@@ -57,7 +57,6 @@
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054065.md#1">张雨绮为何改名？只因电视广告里常有一个字</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054093.md#1">【役情最前线】李家超代理特首当天 黑暴雨示警</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053920.md#1">传张学友出售豪宅 叫价4.3亿港币</a><br>
-<a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054117.md#1">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053872.md#1">香港政情大风暴 时评人纷封口及关频道</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053664.md#1">美众院调查 揭中共如何操纵美企为其服务</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053641.md#1">7.1前北京进入最高战备 井盖也安检打封</a><br>
@@ -106,7 +105,7 @@
 
 !共 379,679,992 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056454.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2014/11/1404210252441664-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056454.md#1">遭中共跨境威胁 留学生：在澳洲我仍不自由</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1">中共删逾千万份判决书 疑图谋抹去不光彩记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051718.md#1">反酷刑日 受害者谈酷刑经历吁彻查大陆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050675.md#1">宁夏女医生 法轮功学员陈淑琴遭冤判4年半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050758.md#1">维权律师蔺其磊发文指遭北京司法部门打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049352.md#1">外媒揭中共专政三手段：没有一个党能万岁</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056392.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/09/190920145543100699-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056392.md#1">美议员提案追责中共 否则加征10%关税</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056264.md#1">中共高调庆生 A股三大指数下行 港股普跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056065.md#1">中信集团或入局华融 已展开摸底</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055386.md#1">航运价不断飙升 大陆外贸企业难以承受</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054680.md#1">大陆猪肉又涨价了 有猪企对生猪提价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054487.md#1">应对中共限价楼市 广州开发商开卖毛坯房</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056418.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13005800-78442cf96db57e426cd79adf9ed02725-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056418.md#1">七一临近 蔡霞：中共比表面看起来更脆弱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056225.md#1">中共在香港推“洗脑”策略 生活教育全染红</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056323.md#1">G20外长会议聚焦疫情 布林肯王毅暗中交锋</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056056.md#1">中共百年刻意忽略黑暗历史 专家：怕被解体</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056031.md#1">应对中共经济胁迫 专家：建立“贸易北约”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055404.md#1">中共当局强调信党爱民 党庆前却扰民不停</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055616.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055659-flood-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055616.md#1">中国南方持续暴雨 乌江等流域或现超警洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054989.md#1">青岛一确诊病例治愈后复阳 3密接者隔离</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055294.md#1">意大利总理公开质疑中国疫苗效力不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054851.md#1">广东兴建健康驿站代替隔离酒店 引民众质疑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054924.md#1">云南省频繁地震 楚雄、大理又现地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053673-hongge-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1">大陆红歌比赛被狗闹场 引舆论热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1">昔日大陆童星流落街头 捡垃圾桶食物果腹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052316.md#1">外籍男打中国人引热议 警方2天后才将其行拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052488.md#1">片仔癀每粒涨至上千元 价格暴涨的背后</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052183.md#1">污水倒灌 深圳小区上千住户连喝2个月粪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051612.md#1">黄日华忆亡妻洒泪：宁愿折寿20年换她回来</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1">中共推特色学徒制 破坏学而优则仕传统 伤及全民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1">杭州家长晒百万养娃账单 网民：生不起！</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042742.md#1">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056454.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2014/11/1404210252441664-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056454.md#1">遭中共跨境威胁 留学生：在澳洲我仍不自由</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1">中共删逾千万份判决书 疑图谋抹去不光彩记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051718.md#1">反酷刑日 受害者谈酷刑经历吁彻查大陆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050675.md#1">宁夏女医生 法轮功学员陈淑琴遭冤判4年半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050758.md#1">维权律师蔺其磊发文指遭北京司法部门打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049352.md#1">外媒揭中共专政三手段：没有一个党能万岁</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054458.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054464-Chinese-currency-1200x802-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054458.md#1">【名家专栏】人民币升值或贬值的两难困境</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056392.md#1">美议员提案追责中共 否则加征10%关税</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056065.md#1">中信集团或入局华融 已展开摸底</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055386.md#1">航运价不断飙升 大陆外贸企业难以承受</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054680.md#1">大陆猪肉又涨价了 有猪企对生猪提价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054487.md#1">应对中共限价楼市 广州开发商开卖毛坯房</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056225.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053874-DSC_7043-01-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056225.md#1">中共在香港推“洗脑”策略 生活教育全染红</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056323.md#1">G20外长会议聚焦疫情 布林肯王毅暗中交锋</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056056.md#1">中共百年刻意忽略黑暗历史 专家：怕被解体</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13056031.md#1">应对中共经济胁迫 专家：建立“贸易北约”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055404.md#1">中共当局强调信党爱民 党庆前却扰民不停</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055298.md#1">矢板明夫：在中国每个人随时都可能变成弱者</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055616.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13055659-flood-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055616.md#1">中国南方持续暴雨 乌江等流域或现超警洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054989.md#1">青岛一确诊病例治愈后复阳 3密接者隔离</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13055294.md#1">意大利总理公开质疑中国疫苗效力不足</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054851.md#1">广东兴建健康驿站代替隔离酒店 引民众质疑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/29/n13054924.md#1">云南省频繁地震 楚雄、大理又现地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053673-hongge-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13053245.md#1">大陆红歌比赛被狗闹场 引舆论热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1">昔日大陆童星流落街头 捡垃圾桶食物果腹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052316.md#1">外籍男打中国人引热议 警方2天后才将其行拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052488.md#1">片仔癀每粒涨至上千元 价格暴涨的背后</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052183.md#1">污水倒灌 深圳小区上千住户连喝2个月粪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051612.md#1">黄日华忆亡妻洒泪：宁愿折寿20年换她回来</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1">中共推特色学徒制 破坏学而优则仕传统 伤及全民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1">杭州家长晒百万养娃账单 网民：生不起！</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042742.md#1">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a><br>
 <a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/3/n12997170.md#1">【独家】全民遭谎言洗脑 有多少真正跟随</a><br>
