--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -8,6 +8,7 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank">【疫情6.29】意大利总理质疑中国疫苗效力不足</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055335.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041466-GettyImages-1233596085-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（6月29日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.81亿（181,436,184）例，死亡人数超过392万（3,929,780）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 8:33 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055358.md#1" target="_blank">美澳加合作出关键矿物地图 保供应链安全</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055358.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1163776858-150x120.jpg" align ="left"></a>随着关注发展绿能产业，全球对关键矿物的需求也逐步增加。美国、澳大利亚和加拿大三国合作推出了一个稀土与关键矿物数据库，帮助制定稀土等关键矿物的开发策略，加强供应链安全。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 5:39 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054287.md#1" target="_blank">武毒所专家隐瞒类似COVID-19病毒来源</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13054287.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12982492-GettyImages-643961414-1200x800-150x120.jpg" align ="left"></a>武汉病毒研究所的病毒学家石正丽，是许多中共病毒重点研究项目和功能获得型实验（gain-of-function experiments）的共同主线。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:25 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055028.md#1" target="_blank">【百年透视】百年中共，一部叛国史和卖国史</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/29/n13055028.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13056647-cb986d79b0c6ee19983b0105c9f558ca-150x120.jpg" align ="left"></a>中共建党百年之际，搞了一个党史展览馆。展出从“革命、建设到改革”各阶段的图像或雕塑，然而，却回避了党史中至少一半的重大事件，包括：反右运动、大跃进、大饥荒、文革、六四屠城、迫害信仰群体等。选择性的展示，对应选择性的隐瞒。向人们展示表面的光鲜，却隐瞒内在的肮脏。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 2:22 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13049219.md#1" target="_blank">中共三任党魁对美外交态度缘何不同？</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13049219.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054380-2-bei-jing-GettyImages-187734702-150x120.jpg" align ="left"></a>自习近平掌权后，中共的外交策略公开转向强硬。到了今天，中共党魁在对美的态度上，与之前江、胡时期出现了明显不同。同时，中共“战狼”外交官们以好战姿态，在全球树敌，引发各国反击。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 11:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank">曾9次遭绑架 长沙女护士贺祥姑失踪一月余</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053398-24b0b0ca6e3615c806f74480d2704dbe-150x120.jpg" align ="left"></a>长沙法轮功学员贺祥姑于2021年3月15日遭绑架，被非法关押至长沙市拘留所，绝水绝食抗议5天后回家；5月15日，再次失踪，至今一个多月下落不明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 9:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053910.md#1" target="_blank">罕见热浪袭美国西北部和东部 电费或猛涨</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/28/n13053910.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054158-GettyImages-1233512988-150x120.jpg" align ="left"></a>美国西北部出现高温天气，并打破纪录，炎热天气从周一（6月28日）开始，可能持续一周。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 7:15 AM							</td></tr>
@@ -34,6 +35,5 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/11/n13015910.md#1" target="_blank">【思想领袖】图尔克：中共种族灭绝必须制止</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/11/n13015910.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050271-5c9233868a29180ad7d1cc7037a648c7-150x120.jpg" align ="left"></a>美国国际宗教自由委员会是根据1998年《国际宗教自由法》的授权成立的一个两党联合政府机构。在USCIRF成立的第二年，中国就被列入“特别关注国家”（CPC）名单。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 9:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/16/n13024693.md#1" target="_blank">【内幕】与美争霸 中共研究反美长臂管辖</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/16/n13024693.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1221997703-150x120.jpg" align ="left"></a>今年6月中共快速通过了《反外国制裁法》，明确提出要反击外国“干涉”。不过大纪元所获内部文件显示，中共自疫情后才开始研究如何反击美国“长臂管辖”，但一直在经济、科技等领域渗透和挑战美国。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 4:35 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050481.md#1" target="_blank">家属揭河南武馆火灾内情 被当局逼签协议</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13050481.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051153-ttl7dayYcr_cc12481a5b610983-150x120.jpg" align ="left"></a>河南商丘市柘城县远襄镇北街的武馆火灾，官报事件造成18死16伤。官方严封消息，不见后续报导。有多名遇难孩子的家长悲愤地告诉大纪元记者，武馆的门被反锁，造成孩子们无法逃出。有的孩子被烧焦，有的面目皆非......。有数十名家长游行表达抗议，失去孩子的母亲痛哭失声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 2:14 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051282.md#1" target="_blank">苹果日报又一主笔冯伟光在机场被拘捕</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/27/n13051282.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053737-DSC02404-150x120.jpg" align ="left"></a>多间港媒28日凌晨引述消息指，《苹果日报》前主笔、英文版执行总编辑冯伟光（笔名“卢峯”），27日晚在香港国际机场被警方国安处拘捕，涉嫌“勾结外国势力”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 1:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
