--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -39,7 +39,6 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/9/n12933748.md#1" target="_blank">王友群：第十任中共党魁江泽民面临的最后结局</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/9/n12933748.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12933750-image-1-150x120.jpeg" align ="left"></a>1989年，踏着“六四”学生鲜血上台的第十任中共党魁江泽民，是百年中共历史上最能体现中共本质的政治流氓和人渣败类。
 
 据中国历史学者吕加平考证，江泽民的身份有“二奸二假”：第一奸，江本人和他的亲生父亲江世俊都是日伪汉奸。抗日战争时期，江世俊当过南京汪精卫伪中央国民政府的宣传部副部长。江泽民高中毕业后，到南京专门为日寇侵华服务的中央大学就读，并加入汉奸组织.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月09日 12:27 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/3/n12994891.md#1" target="_blank">三退声明精选（2021/06/02）</a><br></h3>以前常被蒙骗，不知中共邪恶，近期翻墙看到中共建党至今的所做所为，知道它是一个流氓土匪黑社会邪教兽性集团。深感当它的一员是莫大的耻辱。故此要退出曾经加入的团、队组织，彻底与邪党划清界线。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月03日 9:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/2/n12993450.md#1" target="_blank">参考资料：纵观天下（2020年6月传单/传真）</a><br></h3>网上免费教功 民众好评如潮　我们上共产党的当了　风向大变 武毒所情报将解密　世界在区分中共与中国　每一个被扭紧的螺丝钉都是有罪的 退党声明......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月02日 6:27 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/31/n12987213.md#1" target="_blank">三退声明精选（2021/05/30）</a><br></h3>终于认清了邪党的本质，好走形势、做表面工程、为完成“任务”完全不为民众考虑，表面光鲜、实质腐败，后悔之前动过的想入党的愚蠢想法。在此声明，退出少先队、共青团组织，从此划清界限。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月31日 11:20 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/30/n12985367.md#1" target="_blank">三退声明精选（2021/05/29）</a><br></h3>现在是天怒人怨，张军在单位工作特别认真，因为没送礼被单位书记肆无忌惮的解除行政职务，官官相护，找谁谁推脱，明明知道错了就是不纠正。我声明退出中共邪党的少先队组织。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月30日 11:22 AM							</td></tr>
@@ -59,5 +58,6 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/14/n12948051.md#1" target="_blank">三退声明精选（2021/05/13）</a><br></h3>最近成都一个中学生坠楼身亡，因为掩盖真相在网上引起广泛的质疑和谴责，导致央视也出来“辟谣”，央视“辟谣”管用吗？不管用。为什么？因为央视本身就是一个造谣机器，没有任何信誉可言。当年“天安门自焚案”拚命鼓噪的不也是央视吗？如此弥天大谎都能制造，还有什么谎言不能说？党的喉舌没有信誉是因为这个党就是一个骗子党，自始至终它都在骗人。整个共产党的历史就是一个行骗史。我.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月14日 10:31 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/13/n12944343.md#1" target="_blank">三退声明精选（2021/05/12）</a><br></h3>从小受到邪党的蛊惑加入，这些年的工作和生活，深深的感受到共产党的邪恶，当前的大陆言论极其不自由，不能妄议中央，要两个维护。中国的老百姓深受共产党的欺压，子女教育、住房、医疗，这三座大山把百姓压的喘不过气来，而他们官僚阶层却享受着各种特供，特别是食品和医疗。真是太不公平了，我真心想要退出这个邪恶组织。希望天灭中共早一天早一天到来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月13日 8:35 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/10/n12936699.md#1" target="_blank">三退声明精选（2021/05/09）</a><br></h3>这个共产党真不是个好东西，它不叫人做好人，你的东西被偷了，它不说偷东西的人不对，它说你没有看住。你家的房子被非法拆迁了，你去依法上访，它不去抓拆房子的，它不给你解决问题，它说你闹事，反而抓你这个因为房子被拆迁而依法上访的人，共产党太坏了，我知道的共产党干的坏事太多了，我就爱打抱不平，就看不惯共产党干的坏事，所以我这一辈子就没有入过党，我退入过的少先队！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月10日 4:38 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/6/n12927545.md#1" target="_blank">三退声明精选（2021/05/05）</a><br></h3>今日中国讲真话就意味着可能坐牢，这是一个普遍现象。而高智晟律师因为维护法治、仗义执言被失踪，活不见人、死不见尸。中共就是这样明目张胆、胡作非为。若是高律师违法为什么不开庭审理，连关在哪都不知道，遮羞布都不要了。这就是中共的“法治”。比黑帮还要黑，是最大的黑社会。我们声明退出这个黑帮组织，做回清白的人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 10:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf3046_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_2.htm">https://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
