--- a/gb/nf5773_2.md
+++ b/gb/nf5773_2.md
@@ -22,7 +22,6 @@
 杀人犯是如何入党、如何当上人大代表的？我仔细研究了这个杀人犯被判刑后的离奇经历，感到很震惊。这是一个非常典型的案例。透视这些事件，对了解当今中共到底烂到什么程度，应该很有.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月19日 1:34 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/17/n12955504.md#1" target="_blank">非法持枪等 前兰州国资委主任牛向东获刑14年</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/17/n12955504.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/niuxiangdong-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>5月17日，中共甘肃省工业和信息化厅前巡视员牛向东因受贿罪、非法持有枪支罪，数罪并罚，被判处有期徒刑14年，罚款400万元人民币（下同）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月17日 11:35 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/13/n12945984.md#1" target="_blank">涉嫌受贿等罪 云南省政府副秘书长孙赟被起诉</a><br></h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/13/n12945984.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12946064-yuanan-150x120.jpg" align ="left"></a>日前，中共云南省政府前副秘书长、办公厅前党组成员孙赟因受贿等多项罪名被起诉。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月13日 9:58 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/31/n12986897.md#1" target="_blank">涉官商勾结 河北华银城烂尾 逾五千业主受害</a><br></h3>大陆烂尾楼频发，河北华银城的受害业主为此倾家荡产，上访无果，申诉无门后，不堪重负的他们甚至无奈自杀。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月31日 12:23 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/29/n12983773.md#1" target="_blank">前浙江书记胞弟车建军受审 受贿逾千万</a><br></h3>5月28日上午，中共安徽省人大常委会监察和司法工作委员会前副主任车建军受贿案一审开庭。车建军被指控受贿1200万（人民币，下同）。车建军是前浙江省委书记车俊胞弟，曾任安徽省委政法委副书记兼“610”办公室主任。
 
 车建军被指在1996年至2018年利用担任安徽省纪检委纪检监察员、纪检监察室副主任、主任、省纪委常委、秘书长、副书记、省委政法委副书记等职时.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月29日 11:46 AM							</td></tr>
@@ -41,5 +40,6 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/18/n12957531.md#1" target="_blank">广东云浮政法委书记黄天生落马</a><br></h3>5月18日，中共广东省云浮市委常委、政法委书记黄天生涉嫌“严重违纪违法”，目前正接受调查，官方通报称其“主动投案”。黄天生曾参与迫害法轮功学员，被海外“追查迫害法轮功国际组织”（追查国际）列入追查名单。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月18日 2:37 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/18/n12957083.md#1" target="_blank">山东平度公安局警长张君祥被调查</a><br></h3>日前，山东省青岛市平度市公安局党委委员、一级警长张君祥因涉嫌违纪违法被调查。平度市公安局此前已有多人落马。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月18日 1:32 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/17/n12955517.md#1" target="_blank">受贿超4千万 吉林前检察长杨克勤获刑13年</a><br></h3>5月17日上午，中共吉林省检察院前党组书记、检察长杨克勤以“受贿罪”被判刑13年，其被指控受贿超4,635万元（人民币，下同）。杨克勤曾长期在中央政法委任职，积极参与迫害法轮功学员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月17日 8:30 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/5/13/n12945614.md#1" target="_blank">河南洛阳偃师公安局副局长在办公室自杀身亡</a><br></h3>继中共安徽省宿州市检察院前副检察长徐某春在南京跳河自杀后，近日，中共河南洛阳偃师市公安局副局长高国亮在办公室自杀身亡。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月13日 7:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nf5773_2.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nf5773_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nf5773_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf5773_2.htm">https://www.epochtimes.com/gb/nf5773_2.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
